--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,16 @@ test/tmp
 test/version_tmp
 tmp
 .DS_Store
+# vi[m] temporary and backup files
+*~
+*.swp
+*.swo
+# from https://help.github.com/articles/ignoring-files
+# More OS generated files #
+###########################
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
