--- a/.gitignore
+++ b/.gitignore
@@ -16,13 +16,16 @@ test/tmp
 test/version_tmp
 tmp
 .DS_Store
+# from https://github.com/github/gitignore/blob/master/Global/vim.gitignore
 # vi[m] temporary and backup files
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
 *~
-*.swp
-*.swo
 # from https://help.github.com/articles/ignoring-files
-# More OS generated files #
-###########################
+# More OS generated files
 .DS_Store?
 ._*
 .Spotlight-V100
